webdav-service/k8/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: webdav
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v0
      kind: Mapping
      name: webdav
      prefix: ^/api/webdav(/.*)?$
      prefix_regex: true
      service: webdav:8080
      rewrite: ""

spec:
  clusterIP: None
  type: ClusterIP
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: webdav
